@@ -433,13 +433,13 @@
 %{nil}
 
 # The list of tags for which indices will be built.
-%_dbi_tags	Packages:Name:Basenames:Group:Requirename:Providename:Conflictname:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Removetid:Depends
+%_dbi_tags	Packages:Name:Basenames:Group:Requirename:Providename:Conflictname:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Depends
 
 # "Packages" should have shared/exclusive fcntl(2) lock using "lockdbfd".
 %_dbi_config_Packages		%{_dbi_htconfig} lockdbfd
 
 # "Depends" is a per-transaction cache of known dependency resolutions.
-%_dbi_config_Depends		%{_dbi_htconfig} %{__dbi_transient}
+%_dbi_config_Depends		%{_dbi_htconfig} temporary private
 
 %_dbi_config_Dirnames		%{_dbi_btconfig}
 %_dbi_config_Requireversion	%{_dbi_btconfig}
